CORB and CORS issue with darksky.com solved by using cors-anywhere service, also removed vertical scrollbar

--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -51,6 +51,7 @@
      background: rgb(221,160,221);
      background: linear-gradient(45deg, rgba(221,160,221,1) 25%, rgba(60,162,200,1) 75%);
      transition: all 1s;
+     overflow:hidden;
  }
  .landing {
      position: relative;
